# autotools-guile-example

./: .gitignore  Makefile.am  README.org  configure.ac
app/: myapp.scm
build-aux/: test-driver.scm
doc/: autotools-guile-example.texi
src/: autotools-guile-example.scm
src/autotools-guile-example/: config.scm.in  factorial.scm
test/: test.scm
